--- a/index.html
+++ b/index.html
@@ -3,20 +3,75 @@
     <div>
         <div>
             <div>
-                <ul>
-                    <li><a href="https://refresher.sk/benefity">Benefity</a></li>
-                    <li><a href="https://refresher.sk/filmy-a-serialy/databaza">Filmová databáza</a></li>
-                    <li><a href="https://tvprogram.refresher.sk">TV program</a></li>
-                    <li><a href="https://shop.refresher.sk">Shop</a></li>
-                    <li><a href="https://market.refresher.sk">Market</a></li>
-                    <li><a href="https://blog.refresher.sk">Blog</a></li>
+    
+                <ul role="menu">
+                    <li role="presentation">
+                        <a  role="menuitem" 
+                            href="https://refresher.sk/benefity"
+                        >
+                            Benefity
+                        </a>
+                    </li>
+                    <li role="prese">
+                        <a  role="menuitem" 
+                            href="https://refresher.sk/filmy-a-serialy/databaza"
+                        >
+                            Filmová databáza
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a  role="menuitem" 
+                            href="https://tvprogram.refresher.sk"
+                        >
+                            TV program
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a  role="menuitem" 
+                            href="https://shop.refresher.sk"
+                        >
+                            Shop
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a  role="menuitem" 
+                            href="https://market.refresher.sk"
+                        >
+                            Market
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a  role="menuitem" 
+                            href="https://blog.refresher.sk"
+                        >
+                            Blog
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div>
-                <ul>
-                    <li><a href="https://onas.refresher.sk">O nás</a></li>
-                    <li><a href="https://onas.refresher.sk/kariera">Kariéra</a></li>
-                    <li><a href="https://onas.refresher.sk/#kontakt">Kontakt</a></li>
+                <ul role="menu">
+                    <li role="presentation">
+                        <a  role="menuitem" 
+                            href="https://onas.refresher.sk"
+                        >
+                            O nás
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a  role="menuitem" 
+                            href="https://onas.refresher.sk/kariera"
+                        >
+                            Kariéra
+                        </a>
+                    </li>
+                    <li role="presentation">
+                        <a  role="menuitem" 
+                            href="https://onas.refresher.sk/#kontakt"
+                        >
+                            Kontakt
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -25,117 +80,184 @@
     </div>
     <div>
         <div>
-            <div>
-                <div>Kategórie</div>
-                <div>Témy</div>
-                <div>
-                    Najnovšie</div>
-                <div>
-                    Najčítanejšie</div>
-                <a href="https://refresher.sk/video">Video</a>
-                <a href="https://refresher.sk/kvizy">Kvízy</a>
-                <a href="https://refresher.sk/podcasty">Podcasty</a>
-                <a href="https://refresher.sk/refresher/rozhovory">Rozhovory</a>
+            <div role="menu">
+                <div role="menuitem">Kategórie</div>
+                <div role="menuitem">Témy</div>
+                <div role="menuitem">Najnovšie</div>
+                <div role="menuitem">Najčítanejšie</div>
+                
+                <a role="menuitem" 
+                    href="https://refresher.sk/video"
+                >
+                    Video
+                </a>
+                <a  role="menuitem" 
+                    href="https://refresher.sk/kvizy"
+                >
+                    Kvízy
+                </a>
+                <a  role="menuitem" 
+                    href="https://refresher.sk/podcasty"
+                >
+                    Podcasty
+                </a>
+                <a  role="menuitem" 
+                    href="https://refresher.sk/refresher/rozhovory"
+                >
+                    Rozhovory
+                </a>
             </div>
-            <div>
-                <a href="https://refresher.sk/hudba">
+            <div role="menu">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/hudba"
+                >
                     Hudba
                 </a>
-                <a href="https://refresher.sk/moda">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/moda"
+                >
                     Móda
                 </a>
-                <a href="https://refresher.sk/filmy-a-serialy">
-                    Filmy a
-                    Seriály
+                <a  role="menuitem" 
+                    href="https://refresher.sk/filmy-a-serialy"
+                >
+                    Filmy a Seriály
                 </a>
-                <a href="https://refresher.sk/tech">
+                <a  role="menuitem"
+                    href="https://refresher.sk/tech"
+                >
                     Tech
                 </a>
-                <a href="https://refresher.sk/zaujimavosti">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/zaujimavosti"
+                >
                     Zaujímavosti
                 </a>
-                <a href="https://refresher.sk/kultura">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/kultura"
+                >
                     Kultúra
                 </a>
-                <a href="https://refresher.sk/gastro">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/gastro"
+                >
                     Gastro
                 </a>
-                <a href="https://refresher.sk/sport">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/sport"
+                >
                     Šport
                 </a>
-                <a href="https://refresher.sk/refresher">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/refresher"
+                >
                     Refresher
                 </a>
-                <a href="https://refresher.sk/historia">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/historia"
+                >
                     História
                 </a>
-                <a href="https://refresher.sk/osobnosti">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/osobnosti"
+                >
                     Osobnosti
                 </a>
-                <a href="https://refresher.sk/zdravie">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/zdravie"
+                >
                     Zdravie
                 </a>
-                <a href="https://refresher.sk/politika">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/politika"
+                >
                     Politika
                 </a>
                 <!-- -->
-                <a href="https://refresher.sk/tema/kviz">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/tema/kviz"
+                >
                     Kvíz
                 </a>
-                <a href="https://refresher.sk/tema/influenceri">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/tema/influenceri"
+                >
                     Influenceri
                 </a>
-                <a href="https://refresher.sk/tema/marvel">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/tema/marvel"
+                >
                     Marvel
                 </a>
-                <a href="https://refresher.sk/tema/soubiznis">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/tema/soubiznis"
+                >
                     Šoubiznis
                 </a>
-                <a href="https://refresher.sk/tema/vianoce">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/tema/vianoce"
+                >
                     Vianoce
                 </a>
-                <a href="https://refresher.sk/tema/svet-marvelu">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/tema/svet-marvelu"
+                >
                     Marvel filmy a seriály
                 </a>
-                <a href="https://refresher.sk/tema/reklamy-a-marketing">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/tema/reklamy-a-marketing"
+                >
                     Reklamy a marketing
                 </a>
-                <a href="https://refresher.sk/tema/filmy-a-serialy">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/tema/filmy-a-serialy"
+                >
                     Filmy a seriály
                 </a>
                 <!-- -->
-                <div>
+                <div role="presentation">
                     News
                 </div>
-                <a href="https://news.refresher.sk/slovensko">
+                <!-- -->
+                <a  role="menuitem" 
+                    href="https://news.refresher.sk/slovensko">
                     Slovensko
                 </a>
-                <a href="https://news.refresher.sk/zahranicie">
+                <a  role="menuitem" 
+                    href="https://news.refresher.sk/zahranicie">
                     Zahraničie
                 </a>
-                <a href="https://news.refresher.sk/ekonomika">
+                <a  role="menuitem" 
+                    href="https://news.refresher.sk/ekonomika">
                     Ekonomika
                 </a>
-                <a href="https://news.refresher.sk/komentare">
+                <a  role="menuitem" 
+                    href="https://news.refresher.sk/komentare">
                     Komentáre
                 </a>
-                <a href="https://news.refresher.sk/rozhovory">
+                <a  role="menuitem" 
+                    href="https://news.refresher.sk/rozhovory">
                     Rozhovory
                 </a>
-                <a href="https://news.refresher.sk/reportaze">
+                <a  role="menuitem" 
+                    href="https://news.refresher.sk/reportaze">
                     Reportáže
                 </a>
                 <!-- -->>
-                <a href="https://refresher.sk/tema/vlada-roberta-fica">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/tema/vlada-roberta-fica">
                     Vláda Roberta Fica
                 </a>
-                <a href="https://refresher.sk/tema/policia-sr">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/tema/policia-sr">
                     Polícia SR
                 </a>
-                <a href="https://refresher.sk/tema/dopravne-spravy">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/tema/dopravne-spravy">
                     Dopravné správy
                 </a>
-                <a href="https://refresher.sk/tema/doprava">
+                <a  role="menuitem" 
+                    href="https://refresher.sk/tema/doprava">
                     Doprava
                 </a>
             </div>
@@ -490,3 +612,7 @@
                     </a>
                 </div>
                 <div>Kliknutím na tlačidlo ťa presmerujeme na news.refresher.sk</div>
+            </div>
+        </div>
+    </div>
+</nav>  
