--- a/index.html
+++ b/index.html
@@ -1032,72 +1032,63 @@ Všetko
                     chvíľu „zaspať“
                 </a>
             </div>
-            <div class="hp-category-articles-feed__item" data-ctr="all|147395"><a
-                    class="hp-category-articles-feed__item-h"
-                    href="https://refresher.sk/147395-Chces-mat-lepsi-sex-Tieto-konkretne-potraviny-pred-tym-vynechaj">
+            <div>
+                <a
+                    href="https://refresher.sk/147395-Chces-mat-lepsi-sex-Tieto-konkretne-potraviny-pred-tym-vynechaj"
+                >
                     Chceš mať lepší sex? Tieto konkrétne potraviny pred tým vynechaj
                 </a>
-                <div class="hp-category-articles-feed__item-published">30. 10. 2023 10:25</div>
             </div>
         </div>
     </div>
-    <div class="hp-category-articles-feed " style="--category-color: #FF65C0;">
-        <div class="hp-category-articles-feed__head"><a class="hp-category-articles-feed__h"
-                href="https://refresher.sk/hudba"> Hudba</a>
-        <div class="hp-category-articles-feed__content">
-            <div class="article-item" data-ctr="all|148456" style="--category-color: #FF65C0;">
-                <div class="article-item__image"><a
+    <div>
+        <div>
+            <a 
+                href="https://refresher.sk/hudba"
+            >
+                 Hudba
+            </a>
+        <div>
+            <div>
+                <div>
+                    <a
                         href="https://refresher.sk/148456-Yael-sa-priznal-k-drogovej-zavislosti-So-slzami-opisal-najtazsie-obdobie-slavy-a-turbulentny-vztah-so-svojou-ex"
-                        class="article-item__image-gradient">
+                    >
                         <picture>
-                            <source
-                                srcset="https://refstatic.sk/article/Yael-sa-priznal-k-drogovej-zavislosti-So-slzami-opisal-najtazsie-obdobie-slavy-a-turbulentny-vztah-so-svojou-ex~1ee4d0056ac5cd378411.jpg?is=400x250c&amp;ic=0x60x550x343&amp;s=d35489fadea2dbcc7613ee58349244e1a7c7bee678615c67e7883e6d4a5cf84c, https://refstatic.sk/article/Yael-sa-priznal-k-drogovej-zavislosti-So-slzami-opisal-najtazsie-obdobie-slavy-a-turbulentny-vztah-so-svojou-ex~1ee4d0056ac5cd378411.jpg?is=600x375c&amp;ic=0x60x550x343&amp;s=369ce56865be5c70425dbdc6348089bfeda16b2d6978c3ba36a7291f60ce4f87 2x"
-                                media="(min-width: 1000px)">
-                            <source
-                                srcset="https://refstatic.sk/article/Yael-sa-priznal-k-drogovej-zavislosti-So-slzami-opisal-najtazsie-obdobie-slavy-a-turbulentny-vztah-so-svojou-ex~1ee4d0056ac5cd378411.jpg?is=600x375c&amp;ic=0x60x550x343&amp;s=369ce56865be5c70425dbdc6348089bfeda16b2d6978c3ba36a7291f60ce4f87, https://refstatic.sk/article/Yael-sa-priznal-k-drogovej-zavislosti-So-slzami-opisal-najtazsie-obdobie-slavy-a-turbulentny-vztah-so-svojou-ex~1ee4d0056ac5cd378411.jpg?is=800x500c&amp;ic=0x60x550x343&amp;s=51c07d138d7a755135c90fb0cb1a015b176f1845e719d5f54604af58fe529fe0 2x"
-                                media="(min-width: 800px)">
-                            <source
-                                srcset="https://refstatic.sk/article/Yael-sa-priznal-k-drogovej-zavislosti-So-slzami-opisal-najtazsie-obdobie-slavy-a-turbulentny-vztah-so-svojou-ex~1ee4d0056ac5cd378411.jpg?is=400x250c&amp;ic=0x60x550x343&amp;s=d35489fadea2dbcc7613ee58349244e1a7c7bee678615c67e7883e6d4a5cf84c, https://refstatic.sk/article/Yael-sa-priznal-k-drogovej-zavislosti-So-slzami-opisal-najtazsie-obdobie-slavy-a-turbulentny-vztah-so-svojou-ex~1ee4d0056ac5cd378411.jpg?is=600x375c&amp;ic=0x60x550x343&amp;s=369ce56865be5c70425dbdc6348089bfeda16b2d6978c3ba36a7291f60ce4f87 2x"
-                                media="(min-width: 600px)">
-                            <source
-                                srcset="https://refstatic.sk/article/Yael-sa-priznal-k-drogovej-zavislosti-So-slzami-opisal-najtazsie-obdobie-slavy-a-turbulentny-vztah-so-svojou-ex~1ee4d0056ac5cd378411.jpg?is=600x375c&amp;ic=0x60x550x343&amp;s=369ce56865be5c70425dbdc6348089bfeda16b2d6978c3ba36a7291f60ce4f87, https://refstatic.sk/article/Yael-sa-priznal-k-drogovej-zavislosti-So-slzami-opisal-najtazsie-obdobie-slavy-a-turbulentny-vztah-so-svojou-ex~1ee4d0056ac5cd378411.jpg?is=800x500c&amp;ic=0x60x550x343&amp;s=51c07d138d7a755135c90fb0cb1a015b176f1845e719d5f54604af58fe529fe0 2x"
-                                media="(min-width: 420px)">
-                            <source
-                                srcset="https://refstatic.sk/article/Yael-sa-priznal-k-drogovej-zavislosti-So-slzami-opisal-najtazsie-obdobie-slavy-a-turbulentny-vztah-so-svojou-ex~1ee4d0056ac5cd378411.jpg?is=400x250c&amp;ic=0x60x550x343&amp;s=d35489fadea2dbcc7613ee58349244e1a7c7bee678615c67e7883e6d4a5cf84c, https://refstatic.sk/article/Yael-sa-priznal-k-drogovej-zavislosti-So-slzami-opisal-najtazsie-obdobie-slavy-a-turbulentny-vztah-so-svojou-ex~1ee4d0056ac5cd378411.jpg?is=600x375c&amp;ic=0x60x550x343&amp;s=369ce56865be5c70425dbdc6348089bfeda16b2d6978c3ba36a7291f60ce4f87 2x">
-                            <img src="https://refstatic.sk/article/Yael-sa-priznal-k-drogovej-zavislosti-So-slzami-opisal-najtazsie-obdobie-slavy-a-turbulentny-vztah-so-svojou-ex~1ee4d0056ac5cd378411.jpg?is=400x250c&amp;ic=0x60x550x343&amp;s=d35489fadea2dbcc7613ee58349244e1a7c7bee678615c67e7883e6d4a5cf84c"
-                                loading="lazy"
-                                alt="Yael sa priznal k drogovej závislosti. So slzami opísal najťažšie obdobie slávy a turbulentný vzťah so svojou ex" />
+                            <img 
+                                src="https://refstatic.sk/article/Yael-sa-priznal-k-drogovej-zavislosti-So-slzami-opisal-najtazsie-obdobie-slavy-a-turbulentny-vztah-so-svojou-ex~1ee4d0056ac5cd378411.jpg?is=400x250c&amp;ic=0x60x550x343&amp;s=d35489fadea2dbcc7613ee58349244e1a7c7bee678615c67e7883e6d4a5cf84c"
+                            />
                         </picture>
                     </a>
-                    <div class="image-extension ">
-                        <div class="image-extension__text">
-                            <div class="image-extension__text-category">Slovensko</div>
-                            <div class="image-extension__text-published">pred 2 hodinami</div>
+                    <div>
+                        <div>
+                            <div>Slovensko</div>
                         </div>
                     </div>
                 </div>
-                <div class="article-item__data"><a class="article-item__h"
-                        href="https://refresher.sk/148456-Yael-sa-priznal-k-drogovej-zavislosti-So-slzami-opisal-najtazsie-obdobie-slavy-a-turbulentny-vztah-so-svojou-ex">
+                <div>
+                    <a 
+                        href="https://refresher.sk/148456-Yael-sa-priznal-k-drogovej-zavislosti-So-slzami-opisal-najtazsie-obdobie-slavy-a-turbulentny-vztah-so-svojou-ex"
+                    >
                         Yael sa priznal k drogovej závislosti. So slzami opísal najťažšie obdobie slávy a turbulentný
                         vzťah so svojou ex
                     </a>
-                    <div class="article-item__published">pred 2 hodinami</div>
                 </div>
             </div>
-            <div class="hp-category-articles-feed__item" data-ctr="all|147716"><a
-                    class="hp-category-articles-feed__item-h"
-                    href="https://refresher.sk/147716-Cestujucim-vo-vlaku-do-Kosic-sa-naskytol-neuveritelny-pohlad-Takuto-party-vo-vlaku-Slovensko-este-nezazilo">
+            <div>
+                <a
+                    href="https://refresher.sk/147716-Cestujucim-vo-vlaku-do-Kosic-sa-naskytol-neuveritelny-pohlad-Takuto-party-vo-vlaku-Slovensko-este-nezazilo"
+                >
                     Cestujúcim vo vlaku do Košíc sa naskytol neuveriteľný pohľad. Takúto párty vo vlaku Slovensko ešte
                     nezažilo
                 </a>
-                <div class="hp-category-articles-feed__item-published">8. 11. 2023 17:00</div>
             </div>
-            <div class="hp-category-articles-feed__item" data-ctr="all|148180"><a
-                    class="hp-category-articles-feed__item-h"
-                    href="https://refresher.sk/148180--Moje-druhe-meno-je-rytmus-rapuje-Separ-V-novinke-experimentuje-s-elektronickou-hudbou">
+            <div>
+                <a
+                    href="https://refresher.sk/148180--Moje-druhe-meno-je-rytmus-rapuje-Separ-V-novinke-experimentuje-s-elektronickou-hudbou"
+                >
                     „Moje druhé meno je rytmus,“ rapuje Separ. V novinke experimentuje s elektronickou hudbou
                 </a>
-                <div class="hp-category-articles-feed__item-published">10. 11. 2023 11:51</div>
             </div>
         </div>
     </div>
