--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <div>
         <div>
             <div>
-    
+                <a href="#najnovsie">Preskočiť na najnovšie</a>
+                <a href="#filter">Preskočiť na filter vyhľadávania</a>
                 <ul role="menu">
                     <li role="presentation">
                         <a  role="menuitem" 
@@ -290,9 +291,11 @@
         </div>
         <div>
             <div>
-                <div>
-                    <div>
-                        Filter vyhľadávania
+                <div role="menu">
+                    <div role="presentation" id="filter">
+                        <div role="menuitem">
+                            Filter vyhľadávania
+                        </div>
                     </div>
                     <div>
                         <label data-cy="search-filter-articles">
@@ -729,8 +732,12 @@
     <div>
         <div>
 
-            <div>
-                <h2 class="hp-latest-articles-feed__h">Najnovšie</h2>
+            <div role="menu">
+                <div role="presentation" id="najnovsie">
+                    <h2 role="menuitem">
+                        Najnovšie
+                    </h2>
+                </div>
                 <div>
                     <a
                         href="https://refresher.sk/tema/soubiznis">
@@ -778,19 +785,18 @@
 
 
 Všetko
-<div>
-    <div>
-        <a
+<div role="menu">
+    <div role="presentation">
+        <a  role="menuitem"
             href="https://refresher.sk/147958-Lucia-Szabova-Najblizsi-zapas-by-som-chcela-ist-MMA-Vyzvala-ma-zapasnicka-zo-Stvanice-ROZHOVOR">
             <img
                 src="https://refstatic.sk/article/Lucia-Szabova-Najblizsi-zapas-by-som-chcela-ist-MMA-Vyzvala-ma-zapasnicka-zo-Stvanice-ROZHOVOR~5b98a2d9ae2e7c62cff7.jpg?is=400x250c&amp;ic=23x0x1152x720&amp;s=3fcc0e5df918754d9ff352aabba0dafbc810bc36f1b6449b948cec5a22406422"   
             >
             Lucia Szabová: Najbližší zápas by som chcela ísť MMA. Vyzvala ma zápasníčka zo Štvanice (ROZHOVOR)
         </a>
-       
     </div>
-    <div>
-        <a 
+    <div role="presentation">
+        <a  role="menuitem" 
             href="https://refresher.sk/147240-Influencerka-Dominika-Banszka-Skoro-som-zomrela-pri-autonehode-Mala-som-rozsekanu-celu-tvar-a-osemdesiat-stichov-Rozhovor">
             <img
                 src="https://refstatic.sk/article/Influencerka-Dominika-Banszka-Skoro-som-zomrela-pri-autonehode-Mala-som-rozsekanu-celu-tvar-a-osemdesiat-stichov-Rozhovor~a4f80a92960f12157679.jpg?is=400x250c&amp;ic=31x144x1006x629&amp;s=b970062474552635c28f574b83a52b7afb9a8e9cb9a0779860bde35162534792"
@@ -799,43 +805,36 @@ Všetko
             štichov (Rozhovor)
         </a>
     </div>
-    <div>
-        <a 
+    <div role="presentation">
+        <a  role="menuitem" 
             href="https://refresher.sk/147868-Fiki-Sulik-Zeny-v-zapadnych-krajinach-maju-najlahsi-zivot-na-svete-ovela-lahsi-ako-muzi-Nemaju-ziadne-rozdiely-v-platoch">
             <img
                 src="https://refstatic.sk/article/Fiki-Sulik-Zeny-v-zapadnych-krajinach-maju-najlahsi-zivot-na-svete-ovela-lahsi-ako-muzi-Nemaju-ziadne-rozdiely-v-platoch~ef1863f73122ad874290.jpg?is=400x250c&amp;s=d805266e02eff955d26c09754730bceaf63959370b24b1fb6a2f98fc548d082e"
             >
         </a>
-        <a 
+        <a  role="menuitem" 
             href="https://refresher.sk/147868-Fiki-Sulik-Zeny-v-zapadnych-krajinach-maju-najlahsi-zivot-na-svete-ovela-lahsi-ako-muzi-Nemaju-ziadne-rozdiely-v-platoch"
         >
             Fiki Sulík: Ženy v západných krajinách majú najľahší život na svete, oveľa ľahší ako muži. Nemajú žiadne
             rozdiely v platoch
         </a>
-        <div>
-            <a
+        <div role="presentation">
+            <a  role="menuitem"
                 href="https://refresher.sk/147468-Patrik-Kincl-Ja-po-trilogii-s-Vemolom-netuzim-To-ci-nakoniec-bude-zavisi-uz-len-od-toho-ci-Oktagon-splni-podmienky-Rozhovor">
             <img
                 src="https://refstatic.sk/article/Patrik-Kincl-Ja-po-trilogii-s-Vemolom-netuzim-To-ci-nakoniec-bude-zavisi-uz-len-od-toho-ci-Oktagon-splni-podmienky-Rozhovor~b272b2cd17285da1437f.jpg?is=400x250c&amp;ic=243x321x1580x989&amp;s=54102d4190aff42d65972b8441fd6ceefa0ac4c46370694c910c2776dbc247e7"
             >
-            </a>
-            <a 
-                href="https://refresher.sk/147468-Patrik-Kincl-Ja-po-trilogii-s-Vemolom-netuzim-To-ci-nakoniec-bude-zavisi-uz-len-od-toho-ci-Oktagon-splni-podmienky-Rozhovor"
-            >
-                Patrik Kincl: Ja po trilógii s Vémolom netúžim. To, či nakoniec bude, závisí už len od toho, či Oktagon
-                splní podmienky (Rozhovor)
+                    Patrik Kincl: Ja po trilógii s Vémolom netúžim. To, či nakoniec bude, závisí už len od toho, či Oktagon
+                    splní podmienky (Rozhovor)
             </a>
         </div>
-        <div>
-            <a
+        <div role="presentation">
+            <a  role="menuitem"
                 href="https://refresher.sk/147644-Yak-sha-nam-ukazal-druhe-poschodie-luxusneho-mezonetu-Cena-bonsaja-ti-vyrazi-dych-OTVOR-SOM-DOLE"
             >
                 <img
                     src="https://refstatic.sk/article/Yak-sha-nam-ukazal-druhe-poschodie-luxusneho-mezonetu-Cena-bonsaja-ti-vyrazi-dych-OTVOR-SOM-DOLE~8c276540585a6da4eff3.jpg?is=400x250c&amp;ic=27x0x1152x720&amp;s=ca622f304f8ac84ad217caa50c960b5273344bd6425b78d171f5cb8fe323d788"
                 >
-            </a>
-            <a
-                href="https://refresher.sk/147644-Yak-sha-nam-ukazal-druhe-poschodie-luxusneho-mezonetu-Cena-bonsaja-ti-vyrazi-dych-OTVOR-SOM-DOLE">
                 Yak.sha nám ukázal druhé poschodie luxusného mezonetu. Cena bonsaja ti vyrazí dych (OTVOR, SOM DOLE)
             </a>
         </div>
@@ -846,17 +845,6 @@ Všetko
 
 <div>
     <div>
-        <div>
-            <a 
-                href="https://refresher.sk/refresher"
-            > 
-                Refresher
-            </a>
-                <a href="https://refresher.sk/refresher"
-                >
-                    Všetko
-                </a>
-        </div>
         <div>
             <div>
                 <div>
@@ -986,22 +974,14 @@ Všetko
                     <a 
                         href="https://refresher.sk/147644-Yak-sha-nam-ukazal-druhe-poschodie-luxusneho-mezonetu-Cena-bonsaja-ti-vyrazi-dych-OTVOR-SOM-DOLE"
                     >
-                        Yak.sha nám ukázal druhé poschodie luxusného mezonetu. Cena bonsaja ti vyrazí dych (OTVOR, SOM
-                        DOLE)
+                        Yak.sha nám ukázal druhé poschodie luxusného mezonetu. Cena bonsaja ti vyrazí dych 
                     </a>
                 </div>
             </div>
         </div>
     </div>
     <div>
-        <div>
-            <a href="https://refresher.sk/zdravie"> 
-                Zdravie
-            </a>
-            <a href="https://refresher.sk/zdravie">
-                Všetko
-            </a>
-        </div>
+
         <div>
             <div>
                 <div>
