--- a/index.html
+++ b/index.html
@@ -3,11 +3,30 @@
     <div>
         <div>
             <div>
-                <a href="#najnovsie">Preskočiť na najnovšie</a>
-                <a href="#filter">Preskočiť na filter vyhľadávania</a>
-                <a href="#vsetko">Preskočiť na najnovšie - všetko</a>
-                <a href="#lifestyle">Preskočiť na lifestyle</a>
-                <a href="#refresher">Preskočiť na refresher</a>
+                <ul role="menu">
+                    <li role="presentation">
+                        <a  role="menuitem" 
+                            href="#najnovsie">Preskočiť na najnovšie</a>
+                    </li>
+                    <li role="presentation">
+                        <a  role="menuitem" 
+                            href="#filter">Preskočiť na filter vyhľadávania</a>
+                    </li>
+                    <li role="presentation">
+                        <a  role="menuitem" 
+                            href="#vsetko">Preskočiť na najnovšie - všetko</a>
+                    </li>
+                    <li role="presentation">
+                        <a  role="menuitem" 
+                            href="#lifestyle">Preskočiť na lifestyle</a>
+                    </li>
+                    <li role="presentation">
+                        <a  role="menuitem" 
+                            href="#refresher">Preskočiť na refresher</a>
+                    </li>
+                   
+                </ul>
+                <!-- -->
                 <ul role="menu">
                     <li role="presentation">
                         <a  role="menuitem" 
